<!--

    Copyright 2013-2024 The OpenZipkin Authors

    Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
    in compliance with the License. You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software distributed under the License
    is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
    or implied. See the License for the specific language governing permissions and limitations under
    the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <groupId>io.zipkin.brave</groupId>
    <artifactId>brave-instrumentation-parent</artifactId>
    <version>5.18.0-SNAPSHOT</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>

  <artifactId>brave-instrumentation-dubbo-rpc</artifactId>
  <name>Brave Instrumentation: Alibaba Dubbo</name>

  <properties>
    <!-- Matches Export-Package in bnd.bnd -->
    <module.name>brave.dubbo.rpc</module.name>

    <main.basedir>${project.basedir}/../..</main.basedir>
    <!-- Use brave-instrumentation-dubbo for Apache Dubbo 2.7+, not this module. -->
    <dubbo.version>2.6.12</dubbo.version>

    <!-- add opens to avoid below in JRE 21:
         com.alibaba.dubbo.common.extension.ExtensionLoader -->
    <maven-surefire-plugin.argLine>
      --add-opens java.base/java.lang=ALL-UNNAMED
    </maven-surefire-plugin.argLine>
    <!-- add opens to avoid below in JRE 21:
         com.alibaba.com.caucho.hessian.io.JavaSerializer -->
    <maven-failsafe-plugin.argLine>
      ${maven-surefire-plugin.argLine}
      --add-opens java.base/java.lang=ALL-UNNAMED
      --add-opens java.base/java.lang.reflect=ALL-UNNAMED
      --add-opens java.base/java.math=ALL-UNNAMED
    </maven-failsafe-plugin.argLine>
  </properties>

  <dependencies>
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>brave-instrumentation-rpc</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>com.alibaba</groupId>
      <artifactId>dubbo</artifactId>
      <version>${dubbo.version}</version>
      <scope>provided</scope>
    </dependency>

    <!-- Prevent classpath problems in IDE running tests -->
    <dependency>
      <groupId>io.netty</groupId>
      <artifactId>netty-all</artifactId>
      <version>${netty.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>brave-tests</artifactId>
      <version>${project.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <profiles>
    <profile>
      <id>release</id>
      <properties>
        <!-- Dubbo is 1.6 bytecode -->
        <maven.compiler.source>1.6</maven.compiler.source>
        <maven.compiler.target>1.6</maven.compiler.target>
        <maven.compiler.release>6</maven.compiler.release>
      </properties>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-enforcer-plugin</artifactId>
            <version>${maven-enforcer-plugin.version}</version>
            <executions>
              <execution>
                <id>enforce-java</id>
                <goals>
                  <goal>enforce</goal>
                </goals>
                <configuration>
                  <rules>
                    <!-- The only LTS JDK we support that can compile 1.6 bytecode is 11.
                         https://www.oracle.com/java/technologies/javase/12-relnote-issues.html -->
                    <requireJavaVersion>
                      <version>[11,12)</version>
                    </requireJavaVersion>
                  </rules>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
